// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component Search connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/profile"
        onClick={[Function]}
      >
        mon profil
      </a>
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        se déconnecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <section
    className="Search"
  >
    <div
      className="searchArea"
    >
      <div
        className="infoTitle"
      >
         Rechercher
      </div>
      <form
        className="searchForm"
      >
        <div
          className="firstNameDiv"
        >
           
          Prénom
           
        </div>
        <input
          className="firstName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="lastNameDiv"
        >
           
          Nom
           
        </div>
        <input
          className="lastName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="positionIdDiv"
        >
           
          Poste
           
        </div>
        <select
          className="positionId"
          onChange={[Function]}
        >
          <option
            value=""
          />
        </select>
        <div
          className="companyDiv"
        >
           
          Entreprise
           
        </div>
        <input
          className="company"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="yearDiv"
        >
           
          Année
           
        </div>
        <input
          className="year"
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="searchInput"
          onClick={[Function]}
          type="submit"
          value="Rechercher"
        />
      </form>
    </div>
    <section
      className="MemberArray members"
    >
      <div
        className="searchResult"
      >
        <div
          className="data"
        >
          <div
            className="info"
          >
            Vous pouvez effectuer une recherche sur les critères ci-contre
          </div>
        </div>
      </div>
    </section>
    <section
      className="MemberInfo"
    />
  </section>,
]
`;

exports[`Search component Search not connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/profile"
        onClick={[Function]}
      >
        mon profil
      </a>
      <a
        className="button"
        href="/connection"
        onClick={[Function]}
      >
        se connecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <section
    className="Search"
  >
    <div
      className="searchArea"
    >
      <div
        className="infoTitle"
      >
         Rechercher
      </div>
      <form
        className="searchForm"
      >
        <div
          className="firstNameDiv"
        >
           
          Prénom
           
        </div>
        <input
          className="firstName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="lastNameDiv"
        >
           
          Nom
           
        </div>
        <input
          className="lastName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="positionIdDiv"
        >
           
          Poste
           
        </div>
        <select
          className="positionId"
          onChange={[Function]}
        >
          <option
            value=""
          />
        </select>
        <div
          className="companyDiv"
        >
           
          Entreprise
           
        </div>
        <input
          className="company"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="yearDiv"
        >
           
          Année
           
        </div>
        <input
          className="year"
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="searchInput"
          onClick={[Function]}
          type="submit"
          value="Rechercher"
        />
      </form>
    </div>
    <section
      className="MemberArray members"
    >
      <div
        className="searchResult"
      >
        <div
          className="data"
        >
          <div
            className="info"
          >
            Vous pouvez effectuer une recherche sur les critères ci-contre
          </div>
        </div>
      </div>
    </section>
    <section
      className="MemberInfo"
    />
  </section>,
]
`;

exports[`Search component renders without crashing 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/profile"
        onClick={[Function]}
      >
        mon profil
      </a>
      <a
        className="button"
        href="/connection"
        onClick={[Function]}
      >
        se connecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <section
    className="Search"
  >
    <div
      className="searchArea"
    >
      <div
        className="infoTitle"
      >
         Rechercher
      </div>
      <form
        className="searchForm"
      >
        <div
          className="firstNameDiv"
        >
           
          Prénom
           
        </div>
        <input
          className="firstName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="lastNameDiv"
        >
           
          Nom
           
        </div>
        <input
          className="lastName"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="positionIdDiv"
        >
           
          Poste
           
        </div>
        <select
          className="positionId"
          onChange={[Function]}
        >
          <option
            value=""
          />
        </select>
        <div
          className="companyDiv"
        >
           
          Entreprise
           
        </div>
        <input
          className="company"
          onChange={[Function]}
          type="text"
          value=""
        />
        <div
          className="yearDiv"
        >
           
          Année
           
        </div>
        <input
          className="year"
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="searchInput"
          onClick={[Function]}
          type="submit"
          value="Rechercher"
        />
      </form>
    </div>
    <section
      className="MemberArray members"
    >
      <div
        className="searchResult"
      >
        <div
          className="data"
        >
          <div
            className="info"
          >
            Vous pouvez effectuer une recherche sur les critères ci-contre
          </div>
        </div>
      </div>
    </section>
    <section
      className="MemberInfo"
    />
  </section>,
]
`;
